k8s/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-python-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-python-app
  template:
    metadata:
      labels:
        app: humangov-python-app
    spec:
      serviceAccountName: humangov-pod-execution-role
      containers:
      - name: humangov-python-app
        image: IMAGE_PLACEHOLDER
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: humangov-python-app-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: humangov-python-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-nginx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-nginx
  template:  
    metadata:
      labels:
        app: humangov-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      volumes:
      - name: nginx-config
        configMap:
          name: humangov-nginx-config

---
apiVersion: v1
kind: Service
metadata:
  name: humangov-nginx-service
  namespace: default
spec: 
  type: ClusterIP
  selector:
    app: humangov-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
